# encrypt-ika-frontier

./: .gitignore  Anchor.toml  Cargo.toml  README.md  chat.txt  details.md  multisig_plan.md  package.json  plan.md  session-ses_273c.md  spec.md  tsconfig.json
.superstack/: build-context.md
programs/liquidation_coordinator/: Cargo.toml
programs/liquidation_coordinator/src/: constants.rs  error.rs  events.rs  lib.rs
programs/liquidation_coordinator/src/instructions/: check_health.rs  finalize.rs  initialize_position.rs  mod.rs  request_resolution_decryption.rs  resolve_auction.rs  submit_bid.rs
programs/liquidation_coordinator/src/integrations/: encrypt.rs  ika.rs  mod.rs
programs/liquidation_coordinator/src/state/: mod.rs
proto/: encrypt_service.proto  ika_dwallet.proto
scripts/: bid-client.ts  broadcaster.ts  finalize-auction.ts  request-resolution-decryption.ts  resolve-auction.ts  watcher.ts
scripts/lib/: bitcoin.ts  encrypt-client.ts  ika-client.ts  liquidation.ts
tests/: liquidation_coordinator.ts
tools/liquidation_graph/: Cargo.toml
tools/liquidation_graph/src/: lib.rs  main.rs
